tests/dataset/tpc-ds/compiler/py/q94.out
Traceback (most recent call last):
  File "/tmp/q94.py", line 314, in <module>
    order_count=len(distinct([x["ws_order_number"] for x in filtered])),
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/q94.py", line 314, in <listcomp>
    order_count=len(distinct([x["ws_order_number"] for x in filtered])),
                              ~^^^^^^^^^^^^^^^^^^^
TypeError: 'WebSale' object is not subscriptable
